# transcript_tests

./: .gitignore  SETUP.md  batch_runner.py  config.py  detect.py  downloader.py  enrichment.py  finbert_sentiment_pipeline_plan.md  inhouse_example.json  interface.py  main.py  pipeline.py  pyproject.toml  requirements.txt  run_sentiment.py  run_weekly.py  sentiment.py  sentiment_events.csv  sentiment_events_by_section.csv  sentiment_integration_spec_v3.docx  sqlstuff.txt  test_examples.py  timestamped_transcript_example.json
src/: batch_runner.py  config.py  downloader.py  pipeline.py  run_state.py
src/db/: interface.py  stub.py
src/enrichment/: delta.py  sections.py  speakers.py  threshold.py
src/parsers/: base.py  detect.py
src/sentiment/: __init__.py  aggregator.py  finbert.py  orchestrator.py  pipeline.py  upload_backfill.py
